...
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Contacts" id="SnZ-Bl-mLT">
                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="add" id="5vb-Di-B4i">
                            <color key="tintColor" red="0.31372549019607843" green="0.8901960784313725" blue="0.76078431372549016" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
...
                                                    <constraint firstAttribute="width" constant="46" id="e65-W2-8qT"/>
                                                </constraints>
                                                <state key="normal" title="Button" image="camera_button"/>
                                                <connections>
                                                    <action selector="pickImage:" destination="dwy-nB-frP" eventType="touchUpInside" id="oP5-MD-MS5"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GZn-ZL-Xo1">
                                                <rect key="frame" x="105" y="6.6666666666666572" width="293" height="45"/>
                                                <constraints>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5Ee-6l-wbA">
                                                <rect key="frame" x="105" y="6.6666666666666856" width="293" height="45"/>
                                                <constraints>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter Mobile No." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7Hx-62-1Hy">
                                                <rect key="frame" x="105" y="6.6666666666666856" width="293" height="45"/>
                                                <constraints>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter email Id" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="23M-Ej-i9N">
                                                <rect key="frame" x="105" y="6.6666666666666856" width="293" height="45"/>
                                                <constraints>
...
